log
Fri 21 Apr 2023 01:00:45 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
12b342e
Fri 21 Apr 2023 01:08:49 AM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
165ec18
Fri 21 Apr 2023 01:10:15 AM UTC: 
 treemap.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 51 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:77:55: error: ‘TreeNode’ has no member named ‘key’
   77 |         int cmp_result = tree->lower_than(key, current->key);
      |                                                       ^~
treemap.c:96:55: error: ‘TreeNode’ has no member named ‘key’
   96 |             cmp_result = tree->lower_than(key, current->key);
      |                                                       ^~
Compilation failed
4470f27
Fri 21 Apr 2023 01:10:32 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c53b36a
Fri 21 Apr 2023 01:12:47 AM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++-----------------------
 1 file changed, 26 insertions(+), 23 deletions(-)
 tests:  11|6
total_score: 15/70
b0428ec
Fri 21 Apr 2023 01:13:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
32513ff
Fri 21 Apr 2023 01:16:32 AM UTC: 
 treemap.c | 72 ++++++++++++++++++++++++---------------------------------------
 1 file changed, 27 insertions(+), 45 deletions(-)
 tests:  13|5
total_score: 25/70
d9d5d32
